--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "firebase-admin": "^11.5.0",
+    "functions": "^1.0.9",
     "mongodb": "^4.13.0"
   }
 }
